2006-05-26  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeselection.xml (set_select_function): Fix callback
	signature.

	* pygtk-gdk-constants.xml (parent-relative-constant): Add.

	* pygtk-gtkstyle.xml (Attributes): Array attribute items are
	read-write.

	* pygtk-gtkiconview.xml (set_cursor): Bring description in line with
	behavior. Fixes #343039 (Ross Burton)

2006-05-25  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcombobox.xml (get_active): Extend description for TreeStore
	model type active items. Fixes #342555 (Tuomas Vesterinen)

2006-05-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkevent.xml (gtk.gdk.event_handler_set): Add description.

	* pygtk-gtk-functions.xml (gtk.init_check)
	(add_log_handlers, remove_log_handlers): Add function descriptions.

	* pygtk-gtktreesortable.xml (set_default_sort_func): Add info that
	sort_func param can be None.

	* pygtk-gtktreeviewcolumn.xml (cell_get_size): Add cell_area param.

	* pygtk-gdk-constants.xml (Pixbuf Rotation Constants): Add description.

	* pygtk-gdkpixbuf.xml (rotate_simple): Add method description

2006-05-01  John Finlay  <finlay@moeraki.com>

	* pygtk-pangolayoutline.xml (index_to_x): Fix param name.

	* pygtk-gtkcontainer.xml (list_child_properties)
	(install_child_property): Add method descriptions.
	(gtk.container_class_install_child_property)
	(gtk.container_class_list_child_properties): Add deprecation warning.

	* pygtk-gdkdrawable.xml (draw_indexed_image): Add method description.

	* pygtk-pangocairo-functions.xml (context_set_font_options)
	(context_get_font_options): Add function descriptions.

	* pygtk-gdkscreen.xml (get_rgba_colormap, gdk_screen_get_rgba_visual):
	Add these new method descriptions.

	* pygtk-gdkdragcontext.xml (set_icon_name): Add.

	* pygtk-gdkwindow.xml (set_urgency_hint): Add.

	* pygtk-gtktreeview.xml (get_visible_range): Add.

	* pygtk-gtkwidget.xml (drag_source_add_image_targets)
	(drag_source_add_uri_targets, drag_source_set_icon_name): Add.
