@@ -101,16 +101,23 @@ linkend="function-gdk--event-get">gtk.gdk.event_get</link></methodname>
   </methodsynopsis><methodsynopsis language="python">
 	<methodname><link
 linkend="function-gdk--event-get-graphics-expose">gtk.gdk.event_get_graphics_expose</link></methodname>
-	<methodparam></methodparam>
+	<methodparam><parameter
+		       role="keyword">window</parameter></methodparam>
   </methodsynopsis><methodsynopsis language="python">
 	<methodname><link
 linkend="function-gdk--set-show-events">gtk.gdk.set_show_events</link></methodname>
-	<methodparam></methodparam>
+	<methodparam><parameter
+		       role="keyword">show_events</parameter></methodparam>
   </methodsynopsis><methodsynopsis language="python">
 	<methodname><link
 linkend="function-gdk--get-show-events">gtk.gdk.get_show_events</link></methodname>
 	<methodparam></methodparam>
-  </methodsynopsis></programlisting>
+  </methodsynopsis><methodsynopsis language="python">
+	<methodname><link
+linkend="function-gdk--event-handler-set">gtk.gdk.event_handler_set</link></methodname>
+	<methodparam><parameter>func</parameter></methodparam>
+	<methodparam><parameter>data</parameter><initializer>None</initializer></methodparam>
+      </methodsynopsis></programlisting>
 
     </refsect2>
 
