@@ -1914,6 +1914,10 @@ returns the setting of the internal debug events flag.</para>
 	</varlistentry>
       </variablelist>
 
+      <note>
+        <para>This function is available in PyGTK 2.10 and above.</para>
+      </note>
+
       <para>The <function>gtk.gdk.event_handler_set</function>() function
       specifies <parameter>func</parameter> as the function to call to
       handle all events from GDK. <parameter>data</parameter> is the
