@@ -1,3 +1,9 @@
+2006-05-29  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gdk-functions.xml (gtk.gdk.event_handler_set): Add link.
+	(gtk.gdk.set_show_events, gtk.gdk.event_get_graphics_expose) Fix
+	function signatures.
+
 2006-05-26  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeselection.xml (set_select_function): Fix callback
